--- a/css/chat.css
+++ b/css/chat.css
@@ -10,20 +10,23 @@
   font-size: 12px;
 }
 
-/* Specific change for Gin Admin theme */
-#live-chat #gin_sidebar {
-  display: none;
-}
-
 #live-chat header {
-  padding: 16px 24px;
   cursor: pointer;
-  color: #fff;
   border-radius: 5px 5px 0 0;
-  background: #293239;
+  background: #cfcfcf;
 }
 
-#live-chat h4::before {
+#live-chat header button {
+  background: transparent;
+  border: none;
+  color: #000;
+  width: 100%;
+  text-align: left;
+  margin: 0;
+  padding: 16px 24px;
+}
+
+#live-chat header button::before {
   display: inline-block;
   width: 8px;
   height: 8px;
@@ -31,55 +34,6 @@
   content: "";
   border-radius: 50%;
   background: #1a8a34;
-}
-
-#live-chat h4 {
-  margin: 0;
-  padding: 0;
-  font-size: 12px;
-}
-
-#live-chat h5 {
-  font-size: 10px;
-}
-
-#live-chat form {
-  padding: 24px;
-}
-
-#live-chat form label {
-  display: none;
-}
-
-#live-chat form .form-item {
-  margin-block: 0;
-}
-
-#live-chat textarea {
-  width: 100%;
-  min-height: 65px;
-  max-height: 130px;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  outline: none;
-}
-
-.chat-message-counter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: none;
-  width: 28px;
-  height: 28px;
-  margin: -15px 0 0 -15px;
-  text-align: center;
-  border: 1px solid #fff;
-  border-radius: 50%;
-  background: #e62727;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 28px;
 }
 
 .chat-close {
@@ -99,19 +53,22 @@
 .chat {
   display: none;
   background: #fcfcfc;
+  height: 0;
+  transition-property: height;
+  transition-duration: .25s;
+  transition-timing-function: ease;
+}
+
+#live-chat.expanded .chat {
+  display: block !important;
+  height: 75vh;
 }
 
 .chat iframe {
   overflow-x: hidden;
   overflow-y: auto;
-  height: 452px;
-  padding: 8px 0;
+  height: 100%;
   width: 100%;
-}
-
-.chat-feedback {
-  margin: 0 0 0 80px;
-  font-style: italic;
 }
 
 .chat-message .loader {
