--- a/templates/localgov-copilot-chat.html.twig
+++ b/templates/localgov-copilot-chat.html.twig
@@ -1,9 +1,8 @@
 <div id="live-chat">
 	<header class="clearfix">
-		  <h4>{{ header }}</h4>
+    <button aria-controls="copilot-livechat">{{ header }}</button>
 	</header>
-  <div class="chat">
+  <div id="copilot-livechat" class="chat" style="display:none;" aria-expanded="false">
     <iframe src="{{ embed_url }}"></iframe>
   </div>
-
 </div>
