--- a/templates/localgov-copilot-chat.html.twig
+++ b/templates/localgov-copilot-chat.html.twig
@@ -1,8 +1,8 @@
 <div id="live-chat">
 	<header class="clearfix">
-    <button aria-controls="copilot-livechat">{{ header }}</button>
+    <button aria-controls="copilot-livechat" aria-expanded="false">{{ header }}</button>
 	</header>
-  <div id="copilot-livechat" class="chat" style="display:none;" aria-expanded="false">
-    <iframe src="{{ embed_url }}"></iframe>
+  <div id="copilot-livechat" class="chat" style="display:none;">
+    {# <iframe> tag injected here by javascript #}
   </div>
 </div>
