--- a/templates/localgov-copilot-chat.html.twig
+++ b/templates/localgov-copilot-chat.html.twig
@@ -3,6 +3,6 @@
     <button aria-controls="copilot-livechat" aria-expanded="false">{{ header }}</button>
 	</header>
   <div id="copilot-livechat" class="chat" style="display:none;">
-    {# <iframe> tag injected here by javascript #}
+    {# chat widget injected here by javascript #}
   </div>
 </div>
