(partially) restore animation
This now does expand rather than collapse...

--- a/css/chat.css
+++ b/css/chat.css
@@ -8,8 +8,9 @@
   width: 400px;
   box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
   font-size: 12px;
-  min-height: 1rem;
-  transition-property: min-height;
+
+  max-height: 4rem;
+  transition-property: max-height;
   transition-duration: .25s;
   transition-timing-function: linear;
 }
@@ -58,6 +59,10 @@
   display: none;
   background: #fcfcfc;
   height: 0;
+}
+
+#live-chat.expanded {
+  max-height: 80vh;
 }
 
 #live-chat.expanded .chat {
