--- a/css/chat.css
+++ b/css/chat.css
@@ -74,6 +74,15 @@
   max-height: 75vh;
 }
 
+/* Move localgov_base focus indicator to outside */
+input[type=text].webchat__send-box-text-box__input:focus {
+  box-shadow: none;
+}
+
+.webchat__send-box-text-box:focus-within {
+  box-shadow: inset 0 0 0 3px;
+}
+
 .chat-message .loader {
   --chat-loader: no-repeat radial-gradient(circle closest-side, #000 90%, #0000);
 
